# Woeful

./: CMakeLists.txt  CONFIG.md  LICENSE  README.md
src/: CMakeLists.txt  config.cpp  main.cpp  packets.h  pcap.h  pcap.hpp  server.cpp  server.h  server.hpp  systemInterface.h  systemInterface.hpp  websocketManager.cpp  websocketManager.h  websocketManager.hpp
tests/: CMakeLists.txt  bad_element.xml  bad_validation.xml  basic.xml  blacklist.xml  test.cpp
